# vexide-slint

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  flake.nix
.github/workflows/: build.yml
examples/: basic.rs
examples/ui/: app.slint
src/: lib.rs  target_pixel.rs
