[package]
name = "vexide-slint"
description = "Slint for the vexide runtime"
repository = "https://github.com/vexide/vexide-slint/"
authors = [
  "vexide",
  "Gavin Niederman <gavinniederman@gmail.com>",
  "doinkythederp <doinkythederp@icloud.com>",
  "Tropical",
  "zabackary",
]
license = "GPL-3.0-only"
keywords = ["vex", "vexide", "vex-robotics", "robotics", "slint"]
version = "0.1.0"
edition = "2021"

[package.metadata.v5]
upload-strategy = "differential"
slot = 1
icon = "cool-x"
compress = true

[dependencies]
vexide = "0.8.0-alpha.2"
slint = { version = "1.12.1", default-features = false, features = [
  "compat-1-2",
  "std",
  "unsafe-single-threaded",
  "renderer-software",
  # TODO: don't think we need libm, but needs testing 
] }

[dev-dependencies]
vexide = "0.8.0-alpha.2"
